--- a/about.html
+++ b/about.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Enginow - About</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <nav>
-      <div class="logo">ENGINOW</div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Enginow – About</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header class="site-header">
+  <div class="container header-inner">
+    <a href="index.html" class="brand">Enginow</a>
+
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <label for="nav-toggle" class="nav-icon">☰</label>
+
+    <nav class="site-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="courses.html">Courses</a></li>
@@ -16,28 +25,28 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+  </div>
+</header>
 
-    <div class="container">
-      <h1>About Enginow</h1>
-      
-      <p><h3> 
-        Enginow was founded in 2025 with a simple mission to make complex and
-        non-technical subjects accessible and easy to understand for all
-        engineering students.
-      </h3></p>
-      <p><h3> 
-        Having experienced the challenges of technical education firsthand, our
-        founder recognized the need for clear, concise, and practical learning
-        resources that bridge the gap between theoretical knowledge and
-        practical application.</h3>
-      </p>
-      <p><h3> 
-        Today, we serve hundreds of students across India,helping them excel in
-        their technical education through our comprehensive courses, concept
-        notes, and learning resources.</h3>
-      </p>
-    </div>
+<main>
 
-    <footer>© 2025 Enginow- Internship Task version</footer>
-  </body>
+<section class="section">
+  <div class="container about-content">
+    <h2>About Enginow</h2>
+
+    <p>Enginow is a learning platform created to help students understand engineering subjects and programming in the simplest way.</p>
+
+    <p>Our mission is to provide easy, free, and high-quality study material for students everywhere.</p>
+
+    <p>We believe learning should be simple, accessible, and enjoyable.</p>
+  </div>
+</section>
+
+</main>
+
+<footer>
+  <p>© 2025 Enginow. All rights reserved.</p>
+</footer>
+
+</body>
 </html>
