--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Enginow- Home</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <nav>
-      <div class="logo"><h1>ENGINOW</h1></div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Enginow – Home</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header class="site-header">
+  <div class="container header-inner">
+    <a href="index.html" class="brand">Enginow</a>
+
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <label for="nav-toggle" class="nav-icon">☰</label>
+
+    <nav class="site-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="courses.html">Courses</a></li>
@@ -16,46 +25,46 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+  </div>
+</header>
 
-    <section class="hero">
-      <h1>Learn. Build. Grow.</h1>
-      <p>
-        Kickstart your tech journey with structured learning paths & real-world
-        projects.
-      </p>
-      <a href="https://www.enginow.in/courses" class="btn">Explore Courses</a>
-    </section>
+<main>
 
-    <div class="container">
-      <h2 style="margin-bottom: 20px">Why Choose Enginow?</h2>
+<section class="hero section">
+  <div class="container">
+    <h1>Welcome to Enginow</h1>
+    <p>Your place to learn engineering concepts, programming skills, and real-world applications.</p>
+    <a href="courses.html" class="btn">Explore Courses</a>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container">
+    <h2>Why Choose Enginow?</h2>
+    <div class="courses-grid">
       <div class="card">
-        <h3>Free Courses</h3>
-        <p>
-          Access our library of free courses covering essential technical
-          subjects.
-        </p>
-      </div>
-      <div class="card">
-        <h3>Structured Learning</h3>
-        <p>
-          Follow a step-by-step curriculum like Enginow’s official platform.
-        </p>
+        <h3>Easy Learning</h3>
+        <p>Concepts explained in the simplest way possible.</p>
       </div>
 
       <div class="card">
-        <h3>Pracctical Learning</h3>
-        <p>Hands-on projects and coding exercises to reinforce concepts.</p>
+        <h3>Free Resources</h3>
+        <p>Access study notes, guides, and tutorials.</p>
       </div>
 
       <div class="card">
-        <h3>Concept Notes</h3>
-        <p>
-          Simplified notes and cheat sheets for quick revision and better
-          understanding.
-        </p>
+        <h3>Quality Content</h3>
+        <p>Updated and industry-oriented technical education.</p>
       </div>
     </div>
+  </div>
+</section>
 
-    <footer>© 2025 Enginow — Internship Task version</footer>
-  </body>
+</main>
+
+<footer>
+  <p>© 2025 Enginow. All rights reserved.</p>
+</footer>
+
+</body>
 </html>
